<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayActivity">

    <!--Title info: Guess The Number!-->
    <TextView
        android:id="@+id/tvGuessTheNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/tvConfigTitleInfoGuessTheNumber"
        android:textColor="#3F51B5"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/ed_user_number_to_guess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.407" />

    <!--Number to guess-->
    <EditText
        android:id="@+id/ed_user_number_to_guess"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.228"
        tools:ignore="SpeakableTextPresentCheck"
        tools:text="12" />

    <!--Check-->
    <Button
        android:id="@+id/btnCheckNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCheckNumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_user_number_to_guess"
        app:layout_constraintVertical_bias="0.100000024" />

    <!--Info-->
    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCheckNumber"
        app:layout_constraintVertical_bias="0.13"
        tools:text="The number is greater" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="285dp"
        android:layout_height="61dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/tvPlayInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_info" />

</androidx.constraintlayout.widget.ConstraintLayout>